--- a/pom.xml
+++ b/pom.xml
@@ -153,6 +153,11 @@
 		<version>1.9.6</version>
 	</dependency>
 	<dependency>
+	    <groupId>junit</groupId>
+	    <artifactId>junit</artifactId>
+	    <version>4.12</version>
+	</dependency>
+	<dependency>
 		<groupId>org.apache.ant</groupId>
 		<artifactId>ant-launcher</artifactId>
 		<version>1.9.6</version>
