--- a/build.properties
+++ b/build.properties
@@ -1,14 +1,6 @@
-# Ant properties for building the springapp
-appserver.home=${user.home}/apache-tomcat-8.0.9
-
-webapp.name=PASTA
-
-# for Tomcat 5 use $appserver.home}/server/lib
-# for Tomcat 6 use $appserver.home}/lib
+# Ant properties for building the application
+appserver.home=/usr/local/tomcat/
 appserver.lib=${appserver.home}/lib
-
 deploy.path=${appserver.home}/webapps
 
-tomcat.manager.url=http://localhost:8080/manager/html
-tomcat.manager.username=tomcat
-tomcat.manager.password=s3cret
+webapp.name=PASTA
