--- a/war/WEB-INF/classes/database.properties
+++ b/war/WEB-INF/classes/database.properties
@@ -1,4 +1,4 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/pasta
-jdbc.username=root
-jdbc.password=
+jdbc.url=jdbc:mysql://mysql:3306/pasta
+jdbc.username=pastauser
+jdbc.password=pastauser
