--- a/war/WEB-INF/classes/project.properties
+++ b/war/WEB-INF/classes/project.properties
@@ -1,6 +1,6 @@
-project.name=PASTA alfredo
-project.proxydomain=web-cache.usyd.edu.au
-project.proxyport=8080
-project.location=/home/tomcat/content/
+project.name=PASTA
+project.proxydomain=
+project.proxyport=
+project.location=/usr/local/pasta/content/
 project.authentication=dummy
 project.createAccountOnSuccessfulLogin=true
