A better way to automatically add an instructor.

--- a/war/WEB-INF/classes/project.properties
+++ b/war/WEB-INF/classes/project.properties
@@ -4,3 +4,4 @@ project.proxyport=
 project.location=/usr/local/pasta/content/
 project.authentication=dummy
 project.createAccountOnSuccessfulLogin=true
+project.initialInstructor=admin
