Added options edit page in admin.

--- a/war/WEB-INF/classes/defaults.properties
+++ b/war/WEB-INF/classes/defaults.properties
@@ -24,3 +24,7 @@ languages.cpp.name=C++
 languages.cpp.extensions=cpp,cc
 languages.cpp.test-case-overhead=100
 languages.cpp.test-suite-overhead=2000
+
+programs.matlab=/usr/local/MATLAB/R2016b/bin/matlab
+programs.mcc=/usr/local/MATLAB/R2016b/bin/mcc
+programs.matlab.install=/usr/local/MATLAB/R2016b/
