Changed submission notice for individual/group submissions to be an option.

--- a/war/WEB-INF/classes/defaults.properties
+++ b/war/WEB-INF/classes/defaults.properties
@@ -30,3 +30,6 @@ languages.cpp.test-suite-overhead=2000
 programs.matlab=/usr/local/MATLAB/R2016b/bin/matlab
 programs.mcc=/usr/local/MATLAB/R2016b/bin/mcc
 programs.matlab.install=/usr/local/MATLAB/R2016b/
+
+submission.individual.text=By submitting this assessment, you declare that you are submitting your own work.
+submission.group.text=By submitting this assessment, you declare that you are submitting your own work and/or the work of your group members.
