--- a/war/WEB-INF/classes/defaults.properties
+++ b/war/WEB-INF/classes/defaults.properties
@@ -33,3 +33,6 @@ programs.matlab.install=/usr/local/MATLAB/R2016b/
 
 submission.individual.text=By submitting this assessment, you declare that you are submitting your own work.
 submission.group.text=By submitting this assessment, you declare that you are submitting your own work and/or the work of your group members.
+
+execution.threads.core.size=2
+execution.threads.max.size=2
