Added numpy as default Python 3 package to install

--- a/war/WEB-INF/classes/languages.properties
+++ b/war/WEB-INF/classes/languages.properties
@@ -1,4 +1,4 @@
-languages=java,matlab,python3,c,cpp
+languages=java,c,cpp,python3,matlab
 
 java.docker-build=java-exec/Dockerfile
 java.build-template=black_box_java_template.xml
@@ -12,6 +12,7 @@ matlab.runner-class=pasta.testing.MatlabBlackBoxTestRunner
 python3.docker-build=python-exec/Dockerfile
 python3.build-template=black_box_python_template.xml
 python3.runner-class=pasta.testing.PythonBlackBoxTestRunner
+python3.build-arg.pipPackages=numpy
 
 c.docker-build=c-exec/Dockerfile
 c.build-template=black_box_c_template.xml
