--- a/war/WEB-INF/classes/languages.properties
+++ b/war/WEB-INF/classes/languages.properties
@@ -13,6 +13,7 @@ python3.docker-build=python-exec/Dockerfile
 python3.build-template=black_box_python_template.xml
 python3.runner-class=pasta.testing.PythonBlackBoxTestRunner
 python3.build-arg.pipPackages=numpy
+python3.build-arg.pythonVersion=3.7.0
 
 c.docker-build=c-exec/Dockerfile
 c.build-template=black_box_c_template.xml
